# Speech-Speech

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  config.docker.yaml  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  install.py  pyproject.toml  requirements-ml.txt  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
local_assistant/: __init__.py  config.py  dev.py  errors.py  hardware_probe.py  healthcheck.py  model_selector.py  server.py
local_assistant/audio/: __init__.py  wav.py
local_assistant/conversation/: __init__.py  chunker.py  manager.py  prompt.py  sanitize.py
local_assistant/llm/: __init__.py  base.py  manager.py  mock.py  ollama.py  openai_compatible.py
local_assistant/memory/: __init__.py  store.py
local_assistant/stt/: __init__.py  base.py  faster_whisper_adapter.py  mock.py
local_assistant/tts/: __init__.py  base.py  chatterbox_adapter.py  kokoro_adapter.py  manager.py  mock.py  optional_adapters.py
tests/: test_api.py  test_chatterbox_adapter.py  test_chunker.py  test_config.py  test_dev.py  test_hardware_probe.py  test_install.py  test_llm.py  test_memory.py  test_model_selector.py  test_prompt.py  test_sanitize.py  test_tts_manager.py
