[project]
name = "speech-speech"
version = "0.1.0"
description = "Fully local voice-to-voice AI assistant with FastAPI and React."
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "soundfile>=0.12.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
